feat: add a fruit

--- a/food.html
+++ b/food.html
@@ -14,7 +14,7 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, incidunt veritatis, adipisci molestias quidem ipsa quibusdam quisquam autem facere enim dolor provident. Enim perspiciatis consequuntur perferendis odit eum aliquam distinctio.
             <ul>
-                <li>food1</li>
+                <li>orange</li>
                 <li>food2</li>
                 <li>food3</li>
                 <li>food4</li>
