--- a/food.html
+++ b/food.html
@@ -4,11 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>classes of food</title>
+    <style>
+        h1{
+            font-family: sans-serif;
+            color: rgb(255, 0, 0);
+            margin: auto;
+            text-align: center;
+            background-color: blue;
+            background-color: rgba(165, 42, 42, 0.69);
+            border-radius: 50%;
+            box-shadow: 30px 20px 20px inset black;
+            box-shadow: 0 20px inset 30px black;
+        }
+        section{
+            max-width: 700;
+            min-width: 400;
+            font-family: serif;
+            border-block: 10px groove brown;
+            border-inline: 10px dashed black;
+            background-color: gray;
+            padding-inline: 20px 40px 10px;
+            padding-block: 20px 40px 10px;
+            margin: auto;
+        }
+        h2{
+            width: 300px;
+            font-family: sans-serif;
+            color: blue;
+            box-shadow: 30px 20px 20px inset black;
+            box-shadow: 0 20px inset 30px black;
+            border-block: 10px groove brown;
+            border-inline: 10px dashed black;
+        }
+        dt{
+            font-family: sans-serif;
+            font-size: large;
+            color: rgb(0, 89, 255);
+            background-color: black;
+            width: 200px;
+        }
+        dl{
+            font-family: sans-serif;
+            background-color: brown;
+            padding-block: 3rem;
+            padding-inline-start: 3rem;
+        }
+    </style>
 </head>
 <body>
     <h1>classes of food</h1>
-
-    <!-- (sect>h2{class$}+p>lorem+ul>li{food$}*5)*2 -->
+     <!-- (sect>h2{class$}+p>lorem+ul>li{food$}*5)*2 -->
     <section>
         <h2>vitamin</h2>
         <p>
